--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,11 @@
     "api": "file:",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.12.1",
     "morgan": "~1.9.1"
   }
 }
